# ocr-tools

./: .gitignore  README.md  main.py  pyproject.toml
ocr_tools/: __init__.py  logger.py  pre_processor.py  utils.py  validator.py
tests/: test_ocr_tools.py
